--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <meta itemprop="url" content="https://edazpotato.github.io/" />
         <span itemprop="totalTime">Far too long</span>
         <span itemprop="recipeYield">Serves 1</span>
-        <span itemprop="cookTime">730 hours</span>
+        <span itemprop="cookTime">P6M</span>
         Ingredients:
             <span itemprop="ingredients">1 Borded developer</span>,
             <span itemprop="ingredients">2 much free time</span>,
