--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <meta property="twitter:description" content="Edazpotato's official website! This is where I'll host all of my junk and test out things and stuff. Follow me on twitter @Edazpotato">
     <meta property="twitter:image" content="https://edazpotato.github.io/images/lightsaber.png">
     <!-- recipie for pintrest rich pin -->
-    <div itemscope itemtype="http://schema.org/Recipe">
+    <div itemscope itemtype="http://schema.org/Recipe" style="display: none;">
         <h1 itemprop="name">High quality website</h1>
         <meta itemprop="url" content="https://edazpotato.github.io/" />
         <span itemprop="totalTime">Far too long</span>
