--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+  <div id="content" class="container cent">
+    <h1 class="title">Nothing to see here...</h1>
+  </div>
   <div id="scripts">
     <script src="app.js"></script>
   </div>
