--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,22 +1,22 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
 
-  <title>Portfolio yay</title>
-  <meta name="description" content="I wish i didnt have to make this">
-  <meta name="author" content="Edaz">
+    <title>Portfolio yay</title>
+    <meta name="description" content="I wish i didnt have to make this">
+    <meta name="author" content="Edaz">
 
-  <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 
-</head>
+  </head>
 
-<body>
-  <div id="content" class="container cent">
-    <h1 class="title">Nothing to see here...</h1>
-  </div>
-  <div id="scripts">
-    <script src="app.js"></script>
-  </div>
-</body>
+  <body darkness-mode="dark">
+    <div id="content" class="container cent">
+      <h1 class="title">Nothing to see here...</h1>
+    </div>
+    <div id="scripts">
+      <script src="app.js"></script>
+    </div>
+  </body>
 </html>
