--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"  darkness-mode="dark">
   <head>
     <meta charset="utf-8">
 
@@ -11,7 +11,7 @@
 
   </head>
 
-  <body darkness-mode="dark">
+  <body"\>
     <div id="content" class="container cent">
       <h1 class="title">Nothing to see here...</h1>
     </div>
