--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,6 +2,7 @@
 <html lang="en"  darkness-mode="dark">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Portfolio yay</title>
     <meta name="description" content="I wish i didnt have to make this">
@@ -13,7 +14,11 @@
 
   <body"\>
     <div id="content" class="container cent">
-      <h1 class="title">Nothing to see here...</h1>
+    	<div class="card 3dhover">
+      		<h1 class="title">Nothing to see here</h1>
+      		<br/>
+      		<p>Unless...</p>
+  		</div>
     </div>
     <div id="scripts">
       <script src="app.js"></script>
