Update UZX to indicate the private beta

--- a/uzx/index.html
+++ b/uzx/index.html
@@ -39,12 +39,15 @@
           <div class="col">
             <h3>The Discord bot you waited for</h3>
           </div>
+          <div class="col">
+          	<h6>Currently in private beta</h6>
+          </div>
         </div>
       </div>
       <div class="col bottom">
         <div class="row spaced">
           <div class="col">
-            <a href="/uzx/invite" class="btn" title="Invite the UZX bot to your Discord server" target="_blank">Invite</a>
+            <a href="/uzx/invite" class="btn" title="Apply to have UZX added to your server" target="_blank">Apply</a>
           </div>
           <div class="col spacer"></div>
           <div class="col">
