--- a/uzx/invite/index.html
+++ b/uzx/invite/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="refresh" content="1;url=https://discord.com/api/oauth2/authorize?client_id=712195162532479008&permissions=8&scope=bot" />
   </head>
   <body>
-    Redirecting to <a href="https://discord.com/api/oauth2/authorize?client_id=712195162532479008&permissions=8&scope=bot">https://discord.com/api/oauth2/authorize?client_id=712195162532479008&permissions=8&scope=bot</a>
+    <!--Redirecting to <a href="https://discord.com/api/oauth2/authorize?client_id=712195162532479008&permissions=8&scope=bot">https://discord.com/api/oauth2/authorize?client_id=712195162532479008&permissions=8&scope=bot</a>-->
+    <h2>UZX is currently in a private beta. Please submit an application <a href=" mailto:edazpotato@gmail.com?subject=UZX%20application&body=%3Cyour%20application%20here%3E%3Cthis%20should%20explain%20why%20UZX%20should%20be%20added%20to%20your%20server%3E%3Cplease%20also%20explain%20what%20your%20server%20is%20about%2C%20how%20many%20members%20it%20has%2C%20etc%3E%3C!!!!%20Submitting%20an%20application%20does%20not%20guarantee%20that%20it%20will%20be%20accepted!%20%3EP.S.%20Once%20your%20server%20has%20been%20approved%20you'll%20have%20to%20give%20me(Edaz%235671)%20a%20invite%20link%20to%20your%20server%2C%20along%20with%20manage_server%20permissions%20so%20that%20I%20can%20add%20UZX">here</a></h2>
   </body>
 </html>
