--- a/uzx/invite/index.html
+++ b/uzx/invite/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="1;url=https://discord.com/api/oauth2/authorize?client_id=712195162532479008&permissions=8&scope=bot" />
+  <title>UZX is curently in a private beta</title>
+    <!--<title>Redirecting...</title>-->
+    <!--<meta http-equiv="refresh" content="1;url=https://discord.com/api/oauth2/authorize?client_id=712195162532479008&permissions=8&scope=bot" />-->
   </head>
   <body>
     <!--Redirecting to <a href="https://discord.com/api/oauth2/authorize?client_id=712195162532479008&permissions=8&scope=bot">https://discord.com/api/oauth2/authorize?client_id=712195162532479008&permissions=8&scope=bot</a>-->
