Fix the messed up body tag

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,7 +12,7 @@
 
   </head>
 
-  <body"\>
+  <body>
     <div id="content" class="container cent">
     	<div class="card 3dhover">
       		<h1 class="title">Nothing to see here</h1>
