--- a/free-vbucks-works-2020-legit/index.html
+++ b/free-vbucks-works-2020-legit/index.html
@@ -1,4 +1,4 @@
-<!-- this code is coppied from https://github.com/ShareX/sharex.github.io/blob/master/premium-trailer/index.html -->
+<!-- this code is base of off https://github.com/ShareX/sharex.github.io/blob/master/premium-trailer/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +6,10 @@
     <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ">
 
     <title>Get free v-bucks! No offers required! 100% legit & safe!</title>
+    <meta name="odescription" content="New free V-BUCKS hack --> Working 2020! Check out this new very safe free V-BUCKS trick if you need some v-bucks! 100% safe, defintly not an iplogger or scam ;)">
 
     <meta property="og:type" content="video.other">
+    <meta name="og:description" content="New free V-BUCKS hack --> Working 2020! Check out this new very safe free V-BUCKS trick if you need some v-bucks! 100% safe, defintly not an iplogger or scam ;)">
     <meta name="twitter:player" content="https://www.youtube.com/embed/dQw4w9WgXcQ">
     <meta name="og:video:type" content="text/html">
     <meta name="og:video:width" content="1">
