--- a/free-vbucks-works-2020-legit/index.html
+++ b/free-vbucks-works-2020-legit/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ?message=Get rickrolled!!">
 
     <title>Get free v-bucks! No offers required! 100% legit & safe!</title>
     <meta name="odescription" content="New free V-BUCKS hack --> Working 2020! Check out this new very safe free V-BUCKS trick if you need some v-bucks! 100% safe, defintly not an iplogger or scam ;)">
@@ -18,7 +18,7 @@
 /free-vbucks.png">
 
     <script type="text/javascript">
-        window.location.href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+        window.location.href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ?message=Get rickrolled!!"
     </script>
 </head>
 <body>
