--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
     
     <!-- particles.js -->
     <script src="/data-bin/particles.js"></script>
+    <!-- micromodal -->
+    <script src="/data-bin/micromodal.min.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="/data-bin/homepage.css"/>
   </head>
@@ -109,6 +111,28 @@
             catch (error) {}
         </script>
     </div>
+    </div>
+    <!-- annoying popup -->
+    <div class="modal micromodal-slide" id="modal-1" aria-hidden="true">
+      <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+        <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
+          <header class="modal__header">
+            <h2 class="modal__title" id="modal-1-title">
+              FREE V-BUCKS!
+            </h2>
+            <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+          </header>
+          <main class="modal__content" id="modal-1-content">
+            <p>
+              Need some free v-bucks? well check out our new working v-bucks trick!
+            </p>
+          </main>
+          <footer class="modal__footer">
+            <a class="modal__btn modal__btn-primary" href="http://edazpotato.github.io/free-vbucks-works-2020-legit/">GET V-BUCKS!</a>
+            <button class="modal__btn" data-micromodal-close aria-label="Close this dialog window">Close</button>
+          </footer>
+        </div>
+      </div>
     </div>
     <div id="scripts">
       <script>
