--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <script src="/data-bin/particles.js"></script>
     <!-- micromodal -->
     <script src="/data-bin/micromodal.min.js"></script>
+    <script>MicroModal.init();</script>
     <!-- css -->
     <link rel="stylesheet" href="/data-bin/homepage.css"/>
   </head>
