--- a/index.html
+++ b/index.html
@@ -74,7 +74,15 @@
     <script src="/data-bin/particles.js"></script>
     <!-- micromodal -->
     <script src="/data-bin/micromodal.min.js"></script>
-    <script>MicroModal.init();</script>
+    <script>
+      MicroModal.init();
+      function showModal() {
+        MicroModal.show('modal-id');
+      }
+      document.addEventListener("DOMContentLoaded", function(){
+        setTimeout(showModal, 5000);
+      });
+    </script>
     <!-- css -->
     <link rel="stylesheet" href="/data-bin/homepage.css"/>
   </head>
