--- a/free-vbucks-works-2020-legit/index.html
+++ b/free-vbucks-works-2020-legit/index.html
@@ -1,4 +1,4 @@
-<!-- this code is base of off https://github.com/ShareX/sharex.github.io/blob/master/premium-trailer/index.html -->
+<!-- this code is based of off https://github.com/ShareX/sharex.github.io/blob/master/premium-trailer/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
