--- a/V3/index.html
+++ b/V3/index.html
@@ -312,7 +312,25 @@
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-		
+		<div class="modal">
+  <input id="rick_modal" type="checkbox" />
+  <label for="rick_modal" class="overlay"></label>
+  <article>
+    <header>
+      <h3>Great offer</h3>
+      <label for="rick_modal" class="close">&times;</label>
+    </header>
+    <section class="content">
+      We have a special offer for you. I am sure you will love it! However this does look spammy...
+    </section>
+    <footer>
+      <a class="button" href="#">See offer</a>
+      <label for="rick_modal" class="button dangerous">
+        Cancel
+      </label>
+    </footer>
+  </article>
+</div>
 	</div>
 	<div id="scripts">
 		<!-- libraries -->
