--- a/V3/index.html
+++ b/V3/index.html
@@ -316,19 +316,7 @@
   <input id="rick_modal" type="checkbox" />
   <label for="rick_modal" class="overlay"></label>
   <article>
-    <header>
-      <h3>Great offer</h3>
-      <label for="rick_modal" class="close">&times;</label>
-    </header>
-    <section class="content">
-      We have a special offer for you. I am sure you will love it! However this does look spammy...
-    </section>
-    <footer>
-      <a class="button" href="#">See offer</a>
-      <label for="rick_modal" class="button dangerous">
-        Cancel
-      </label>
-    </footer>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </article>
 </div>
 	</div>
