--- a/V3/index.html
+++ b/V3/index.html
@@ -18,7 +18,7 @@
 				</svg>
 			</div>-->
 			<div id="profile">
-				<div class="avatar"></div>
+				<div class="avatar"><img src="https://github.com/edazpotato.png" alt="Edazpotato avatar" title="Edazpotato!"/></div>
 				<div class="bio"></div>
 				<div class="links"></div>
 			</div>
