--- a/V3/index.html
+++ b/V3/index.html
@@ -18,9 +18,13 @@
 				</svg>
 			</div>-->
 			<div id="profile">
-				<div class="avatar"><img src="https://github.com/edazpotato.png" alt="Edazpotato avatar" title="Edazpotato!"/></div>
-				<div class="bio"></div>
-				<div class="links"></div>
+				<div class="top">
+					<div class="avatar"><img src="https://github.com/edazpotato.png" alt="Edazpotato avatar" title="Edazpotato!"/></div>
+					<div class="bio"></div>
+				</div>
+				<div class="bottom">
+					<div class="links"></div>
+				</div>
 			</div>
 		</header>
 		<main id="content">
