add noscript tag

--- a/V3/index.html
+++ b/V3/index.html
@@ -10,6 +10,9 @@
 	<link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
+	<noscript>
+		Please turn on javascript to make this website work properly. Thankyou ^-^ 
+	</noscript>
 	<div id="page">
 		<header id="header">
 			<!--<div id="arrow" class="bounce fade">
