--- a/V3/index.html
+++ b/V3/index.html
@@ -22,7 +22,7 @@
 			</div>-->
 			<div id="profile">
 				<div class="top">
-					<div class="avatar"><img src="https://github.com/edazpotato.png" alt="Edazpotato avatar" title="Edazpotato!"/></div>
+					<img class="avatar" src="https://github.com/edazpotato.png?size=2048" alt="Edazpotato avatar" title="Edazpotato!"/>
 					<div class="bio"></div>
 				</div>
 				<div class="bottom">
