Add text to bio section

--- a/V3/index.html
+++ b/V3/index.html
@@ -23,7 +23,12 @@
 			<div id="profile">
 				<div class="top">
 					<img class="avatar" src="https://github.com/edazpotato.png?size=2048" alt="Edazpotato avatar" title="Edazpotato!"/>
-					<div class="bio"></div>
+					<div class="bio">
+						<h1>Edazpotato</h1>
+						<p>
+							Front end developer and Maker of bots. Also some other things.
+						</p>
+					</div>
 				</div>
 				<div class="bottom">
 					<div class="links"></div>
