--- a/V3/index.html
+++ b/V3/index.html
@@ -31,7 +31,13 @@
 					</div>
 				</div>
 				<div class="bottom">
-					<div class="links"></div>
+					<div class="links">
+						<a class="button red"></a>
+						<a class="button orange"></a>
+						<a class="button yellow"></a>
+						<a class="button green"></a>
+						<a class="button blue"></a>
+					</div>
 				</div>
 			</div>
 		</header>
