Add text to buttons

--- a/V3/index.html
+++ b/V3/index.html
@@ -32,11 +32,11 @@
 				</div>
 				<div class="bottom">
 					<div class="links">
-						<a class="button red"></a>
-						<a class="button orange"></a>
-						<a class="button yellow"></a>
-						<a class="button green"></a>
-						<a class="button blue"></a>
+						<a class="button red">Red</a>
+						<a class="button orange">Orange</a>
+						<a class="button yellow">Yellow</a>
+						<a class="button green">Green</a>
+						<a class="button blue">Blue</a>
 					</div>
 				</div>
 			</div>
