try dissabling picnic

--- a/V3/index.html
+++ b/V3/index.html
@@ -5,7 +5,7 @@
 
 	<!-- >>css<< -->
 	<!-- libraries -->
-	<link href="lib/picnic.min.css" rel="stylesheet"/>
+	<!--<link href="lib/picnic.min.css" rel="stylesheet"/>-->
 	<!-- my css -->
 	<link href="styles.css" rel="stylesheet"/>
 </head>
