--- a/V3/index.html
+++ b/V3/index.html
@@ -2,7 +2,11 @@
 <html>
 <head>
 	<title>Website V3</title>
+	
+	<!-- important meta tags -->
+	<meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
 
+	
 	<!-- >>css<< -->
 	<!-- libraries -->
 	<link href="lib/picnic.min.css" rel="stylesheet"/>
