--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
     <!-- meta tags that acctuly effect the content of the page -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="charset" content"utf-8">
+    <meta name="charset" content="utf-8">
     
     <!-- css -->
     <link rel="stylesheet" href="/data-bin/homepage.css"/>
