--- a/uzx/index.html
+++ b/uzx/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- metadata -->
     <meta name="viewport" property="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="charset" property="charset" content"utf-8">
+    <meta name="charset" property="charset" content="utf-8">
     <!-- Primary Meta Tags -->
     <title>UZX - The discord bot you waited for!</title>
     <meta name="title" content="UZX - The discord bot you waited for!">
