--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 			<div class="modal">
 			  <input id="rick_modal" type="checkbox" />
 			  <label for="rick_modal" class="overlay"></label>
-			  <article>
-			    <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			  <article id="rick_video_container">
+			    
 			  </article>
 			</div>
 		</main>
