Imporve video loader logic and change button transparency

--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
 			<div class="modal">
 			  <input id="rick_modal" type="checkbox" />
 			  <label for="rick_modal" class="overlay"></label>
-			  <article id="rick_video_container">
-			    
-			  </article>
+			  <article id="rick_video_container"></article>
 			</div>
 		</main>
 	</div>
