--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- unimportant meta tags -->
+	<!-- COMMON TAGS -->
 	<title>Edazpotato!</title>
+	<!-- Search Engine -->
+	<meta name="description" content="Web Developer and Robot Creator. Also some other things.">
+	<meta name="image" content="https://edazpotato.github.io/assets/banner.png">
+	<!-- Schema.org for Google -->
+	<meta itemprop="name" content="Edazpotato!">
+	<meta itemprop="description" content="Web Developer and Robot Creator. Also some other things.">
+	<meta itemprop="image" content="https://edazpotato.github.io/assets/banner.png">
+	<!-- Twitter -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="Edazpotato!">
+	<meta name="twitter:description" content="Web Developer and Robot Creator. Also some other things.">
+	<meta name="twitter:site" content="@edazpotato">
+	<meta name="twitter:creator" content="@edazpotato">
+	<meta name="twitter:image:src" content="https://edazpotato.github.io/assets/banner.png">
+	<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+	<meta name="og:title" content="Edazpotato!">
+	<meta name="og:description" content="Web Developer and Robot Creator. Also some other things.">
+	<meta name="og:image" content="https://edazpotato.github.io/assets/banner.png">
+	<meta name="og:url" content="https://edazpotato.github.io">
+	<meta name="og:site_name" content="Edazpotato!">
+	<meta name="og:locale" content="en_NZ">
+	<meta name="og:type" content="website">
 	
 	<!-- important meta tags -->
 	<meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
+	<meta charset="utf-8">
 
 	
 	<!-- >>css<< -->
