Change layout of card

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,9 +15,13 @@
   <body>
     <div id="content" class="container cent">
     	<div class="card 3dhover">
-      		<h1 class="title">Nothing to see here</h1>
-      		<br/>
-      		<p>Unless...</p>
+        <div class="img">
+          <img src="" alt="Filler image" title="Filler image" />
+        </div>
+        <div class="txt">
+          <h1 class="title">Nothing to see here</h1>
+          <p>Unless...</p>
+        </div>
   		</div>
     </div>
     <div id="scripts">
