--- a/old/index.html
+++ b/old/index.html
@@ -44,7 +44,7 @@
     <meta name="charset" content="utf-8">
     
     <!-- css -->
-    <link rel="stylesheet" href="/data-bin/homepage.css"/>
+    <link rel="stylesheet" href="/data-bin/homepage.css?a=b&v=69&OwO=420"/>
   </head>
   <body>
     <!-- recipie for pintrest rich pin -->
