Add defer to scripts to speed up page load

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 	</div>
 	<div id="scripts">
 		<!-- libraries -->
-		<script src="js/mousetrap.min.js"></script>
+		<script src="js/mousetrap.min.js" defer></script>
 		<!-- my js -->
-		<script src="js/app.js"></script>
+		<script src="js/app.js" defer></script>
 	</div>
 </body>
 </html>
