defer picnic.css to speed up page load

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	
 	<!-- >>css<< -->
 	<!-- libraries -->
-	<link href="css/picnic.min.css" rel="stylesheet"/>
+	<link href="css/picnic.min.css" rel="stylesheet" preload/>
 	<!-- my css -->
 	<link href="css/styles.css" rel="stylesheet"/>
 </head>
