--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
 				</div>
 				<div class="bottom">
 					<div class="links">
-						<a class="button portfolio" href="portfolio/" target="_blank" rel="noreferer">Portfolio</a>
-						<a class="button twitter" href="https://twitter.com/edazpotato" target="_blank" rel="noreferer">Twitter</a>
-						<a class="button github" href="https://github.com/edazpotato" target="_blank" rel="noreferer">Github</a>
-						<a class="button discord" href="https://discord.gg/mzR7eeZ" target="_blank" rel="noreferer">Discord</a>
-						<a class="button contact" href="contact/" target="_blank" rel="noreferer">Contact</a>
+						<a class="button portfolio" href="portfolio/" target="_blank" rel="noreferrer">Portfolio</a>
+						<a class="button twitter" href="https://twitter.com/edazpotato" target="_blank" rel="noreferrer">Twitter</a>
+						<a class="button github" href="https://github.com/edazpotato" target="_blank" rel="noreferrer">Github</a>
+						<a class="button discord" href="https://discord.gg/mzR7eeZ" target="_blank" rel="noreferrer">Discord</a>
+						<a class="button contact" href="contact/" target="_blank" rel="noreferrer">Contact</a>
 					</div>
 				</div>
 			</div>
 			<div id="imgcredit">
-				<a href="https://www.pexels.com/photo/blue-body-of-water-with-orange-thunder-1102915/" target="_blank" rel="noreferer">Photo by Johannes Plenio from Pexels</a>
+				<a href="https://www.pexels.com/photo/blue-body-of-water-with-orange-thunder-1102915/" target="_blank" rel="noreferrer">Photo by Johannes Plenio from Pexels</a>
 			</div>
 		</header>
 		<main>
