--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 	
 	<!-- >>css<< -->
 	<!-- libraries -->
-	<link href="css/picnic.min.css" rel="stylesheet" preload/>
+	<link href="css/picnic.min.css" rel="stylesheet"/>
 	<!-- my css -->
-	<link href="css/styles.css" rel="stylesheet"/>
+	<link href="css/styles.css" rel="stylesheet" preload/>
 </head>
 <body>
 	<noscript>
