Add items to sidebar

--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -10,7 +10,10 @@
   <body>
     <main id="page" class="full-height">
       <section id="sidebar" class="full-height">
-        
+        <ul id="sidebar-items">
+          <li><a href="#todos">Todos</a></li>
+          <li><a href="#notes">Notes</a></li>
+        </ul>
       </section>
       <section id="content" class="full-height">
         <article id="todos" class="full-height">
