--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- meta tags that have an actual impact on de page -->
     <title>Outlinr - Orginise your thoughts</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
+    <meta charset="utf-8">
+    <meta name="theme-color" content="#A31621">
     <!-- css -->
     <link href="css/outlinr.css" rel="stylesheet" />
     <link href="css/picnic.min.css" rel="stylesheet" />
