Cgange theme colour

--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -5,7 +5,7 @@
     <title>Outlinr - Orginise your thoughts</title>
     <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
     <meta charset="utf-8">
-    <meta name="theme-color" content="#A31621">
+    <meta name="theme-color" content="#00fff3">
     <!-- css -->
     <link href="css/outlinr.css" rel="stylesheet" />
     <link href="css/picnic.min.css" rel="stylesheet" />
