--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -14,6 +14,7 @@
     <main id="page" class="full-height">
       <section id="sidebar" class="full-height">
         <ul id="sidebar-items">
+          <li><a href="#">Home</a></li>
           <li><a href="#todos">Todos</a></li>
           <li><a href="#notes">Notes</a></li>
         </ul>
