--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -14,12 +14,15 @@
     <main id="page" class="full-height">
       <section id="sidebar" class="full-height">
         <ul id="sidebar-items">
-          <li><a href="#">Home</a></li>
+          <li><a href="#home">Home</a></li>
           <li><a href="#todos">Todos</a></li>
           <li><a href="#notes">Notes</a></li>
         </ul>
       </section>
       <section id="content" class="full-height">
+        <article id="home" class="full-height active">
+          
+        </article>
         <article id="todos" class="full-height">
           
         </article>
