--- a/simp-o-meter/index.html
+++ b/simp-o-meter/index.html
@@ -10,7 +10,7 @@
   <body>
     <main id="page">
       <section id="top">
-        <h1>Simp-o-meter/h1>
+        <h1>Simp-o-meter</h1>
         <p>Discover how much of a simp you are</p>
       </section>
       <section id="app">
