Change page title

--- a/simp-o-meter/index.html
+++ b/simp-o-meter/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simp-o-meter - how much of a simp are you?</title>
+    <title>Simp-o-meter - are you a simp?</title>
     
     <!-- css -->
     <link rel="stylesheet" href="simps.css" />
