Add meta tags and re-format

--- a/simp-o-meter/index.html
+++ b/simp-o-meter/index.html
@@ -1,28 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Simp-o-meter - are you a simp?</title>
-    
-    <!-- css -->
-    <link rel="stylesheet" href="simps.css" />
-    <link rel="stylesheet" href="picnic.min.css" />
-    <!-- important meta tags -->
-	<meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
-	<meta charset="utf-8">
-	<meta name="theme-color" content="#A31621">
-  </head>
-  <body>
-    <main id="page">
-      <section id="top">
-        <h1>Simp-o-meter</h1>
-        <p>Discover how much of a simp you are</p>
-      </section>
-      <section id="app">
-      
-      </scrtion>
-    </main>
-    <div id="scripts">
-      <script src="simp-detector.js" defer></script>
-    </div>
-  </body>
+	<head>
+		<!-- unimportant meta tags -->
+		<!-- Search Engine -->
+		<meta name="description" content="Are you a simp? Find out today by using the simp-o-meter. Just answer 10 questions to find out!">
+		<meta name="image" content="ttps://edazpotato.github.io/simp-o-meter/assets/banner.png">
+		<!-- Schema.org for Google -->
+		<meta itemprop="name" content="Simp-o-meter - are you a simp?">
+		<meta itemprop="description" content="Are you a simp? Find out today by using the simp-o-meter. Just answer 10 questions to find out!">
+		<meta itemprop="image" content="ttps://edazpotato.github.io/simp-o-meter/assets/banner.png">
+		<!-- Twitter -->
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:title" content="Simp-o-meter - are you a simp?">
+		<meta name="twitter:description" content="Are you a simp? Find out today by using the simp-o-meter. Just answer 10 questions to find out!">
+		<meta name="twitter:site" content="@edazpotato">
+		<meta name="twitter:creator" content="@edazpotato">
+		<meta name="twitter:image:src" content="ttps://edazpotato.github.io/simp-o-meter/assets/banner.png">
+		<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+		<meta name="og:title" content="Simp-o-meter - are you a simp?">
+		<meta name="og:description" content="Are you a simp? Find out today by using the simp-o-meter. Just answer 10 questions to find out!">
+		<meta name="og:image" content="ttps://edazpotato.github.io/simp-o-meter/assets/banner.png">
+		<meta name="og:url" content="ttps://edazpotato.github.io/simp-o-meter/">
+		<meta name="og:site_name" content="Simp-o-meter - are you a simp?">
+		<meta name="og:locale" content="en_NZ">
+		<meta name="og:type" content="website">
+
+		  <!-- css -->
+		  <link rel="stylesheet" href="simps.css" />
+		  <link rel="stylesheet" href="picnic.min.css" />
+		  <!-- important meta tags -->
+		  <title>Simp-o-meter - are you a simp?</title>
+		  <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
+		  <meta charset="utf-8">
+		  <meta name="theme-color" content="#A31621">
+	</head>
+	<body>
+		<main id="page">
+			<section id="top">
+				<h1>Simp-o-meter</h1>
+				<p>Discover how much of a simp you are</p>
+			</section>
+			<section id="app">
+			</section>
+		</main>
+		<div id="scripts">
+			<script src="simp-detector.js" defer></script>
+		</div>
+	</body>
 </html>
