Tidy up and add some more meta tags

--- a/simp-o-meter/index.html
+++ b/simp-o-meter/index.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<!-- unimportant meta tags -->
+		<!-- common tags -->
+		<meta name="copyright" content="MIT"/>
+		<meta name="keywords" content="simp, simp-o-meter, detector, simp-detector"/>
 		<!-- Search Engine -->
 		<meta name="description" content="Are you a simp? Find out today by using the simp-o-meter. Just answer 10 questions to find out!">
 		<meta name="image" content="ttps://edazpotato.github.io/simp-o-meter/assets/banner.png">
@@ -24,15 +27,16 @@
 		<meta name="og:site_name" content="Simp-o-meter - are you a simp?">
 		<meta name="og:locale" content="en_NZ">
 		<meta name="og:type" content="website">
+		
+		<!-- important meta tags -->
+		<title>Simp-o-meter - are you a simp?</title>
+		<meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
+		<meta charset="utf-8">
+		<meta name="theme-color" content="#A31621">
 
-		  <!-- css -->
-		  <link rel="stylesheet" href="simps.css" />
-		  <link rel="stylesheet" href="picnic.min.css" />
-		  <!-- important meta tags -->
-		  <title>Simp-o-meter - are you a simp?</title>
-		  <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
-		  <meta charset="utf-8">
-		  <meta name="theme-color" content="#A31621">
+		<!-- css -->
+		<link rel="stylesheet" href="simps.css" />
+		<link rel="stylesheet" href="picnic.min.css" />
 	</head>
 	<body>
 		<main id="page">
