comment out picnic

--- a/simp-o-meter/index.html
+++ b/simp-o-meter/index.html
@@ -36,7 +36,7 @@
 
 		<!-- css -->
 		<link rel="stylesheet" href="simps.css" />
-		<link rel="stylesheet" href="picnic.min.css" />
+		<!--<link rel="stylesheet" href="picnic.min.css" />-->
 	</head>
 	<body>
 		<main id="page">
