Add some content

--- a/simp-o-meter/index.html
+++ b/simp-o-meter/index.html
@@ -45,6 +45,12 @@
 				<p>Discover how much of a simp you are</p>
 			</section>
 			<section id="app">
+				<article id="simpometer">
+					<canvas id="simpcanvas" />
+				</article>
+				<article id="simpform">
+					
+				</article>
 			</section>
 		</main>
 		<div id="scripts">
