--- a/simp-o-meter/index.html
+++ b/simp-o-meter/index.html
@@ -46,7 +46,7 @@
 			</section>
 			<section id="app">
 				<article id="simpometer">
-					<canvas id="simpcanvas" />
+					<canvas id="simpcanvas"></canvas>
 				</article>
 				<article id="simpform">
 					
