Switch to self hosted avatar

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<header id="header">
 			<div id="profile">
 				<div class="top">
-					<img class="avatar" src="https://github.com/edazpotato.png?size=2048" alt="Edazpotato avatar" title="Edazpotato!"/>
+					<img class="avatar" src="assets/avatar.png" alt="Edazpotato avatar" title="Edazpotato!"/>
 					<div class="bio">
 						<h1>Edazpotato</h1>
 						<p>
