--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 			<div id="imgcredit">
 				<a href="https://www.pexels.com/photo/blue-body-of-water-with-orange-thunder-1102915/" target="_blank" rel="noreferrer">Photo by Johannes Plenio from Pexels</a>
 			</div>
+			<div id="privacypolicy">
+				<a href="privacy/" target="_blank" rel="noreferrer">Privacy and data policy</a>
+			</div>
 		</header>
 		<main>
 			<div class="modal">
