Add classes to imgcredit and privacy policy

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 					</div>
 				</div>
 			</div>
-			<div id="imgcredit">
+			<div id="imgcredit" class="white-link">
 				<a href="https://www.pexels.com/photo/blue-body-of-water-with-orange-thunder-1102915/" target="_blank" rel="noreferrer">Photo by Johannes Plenio from Pexels</a>
 			</div>
-			<div id="privacypolicy">
+			<div id="privacypolicy" class="white-link">
 				<a href="privacy/" target="_blank" rel="noreferrer">Privacy and data policy</a>
 			</div>
 		</header>
