Switch avatar to webp

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
 		<header id="header">
 			<div id="profile">
 				<div class="top">
-					<img class="avatar" src="assets/avatar.png" alt="Edazpotato avatar" title="Edazpotato!"/>
+					<picture class="avatar" title="Edazpotato!">
+						<source srcset="assets/avatar.webp" type="image/webp">
+						<img src="assets/avatar.png" alt="Edazpotato avatar"/>
+					</picture>
 					<div class="bio">
 						<h1>Edazpotato</h1>
 						<p>
