--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 		<header id="header">
 			<div id="profile">
 				<div class="top">
-					<picture class="avatar" title="Edazpotato!">
+					<picture title="Edazpotato!">
 						<source srcset="assets/avatar.webp" type="image/webp">
-						<img src="assets/avatar.png" alt="Edazpotato avatar"/>
+						<img class="avatar" src="assets/avatar.png" alt="Edazpotato avatar"/>
 					</picture>
 					<div class="bio">
 						<h1>Edazpotato</h1>
