Add another <source>

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 				<div class="top">
 					<picture title="Edazpotato!">
 						<source srcset="assets/avatar.webp" type="image/webp">
-						<img class="avatar" src="assets/avatar.png" alt="Edazpotato avatar"/>
+						<source srcset="assets/avatar.png" type="image/png">
+						<img class="avatar" src="assets/avatar.png" alt="Edazpotato's avatar"/>
 					</picture>
 					<div class="bio">
 						<h1>Edazpotato</h1>
