--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class=”no-js”>
+<html lang="en" class="no-js">
 <head>
 	<!-- unimportant meta tags -->
 	<!-- COMMON TAGS -->
