Remove defer on modinizr

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	</div>
 	<div id="scripts">
 		<!-- libraries -->
-		<script src="js/modernizr-webp.js" defer></script>
+		<script src="js/modernizr-webp.js"></script>
 		<script>Modernizr.on('webp', function (result) {});</script>
 		<script src="js/mousetrap.min.js" defer></script>
 		<!-- my js -->
