Update meta description again

--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
 	<!-- COMMON TAGS -->
 	<title>Edazpotato!</title>
 	<!-- Search Engine -->
-	<meta name="description" content="Edazpotato is a Web Developer and Robot Creator. Also some other things.">
+	<meta name="description" content="Edazpotato is a Web Developer and Robot Creator. Here you can see all of the things I have made, and contact me.">
 	<meta name="image" content="https://edazpotato.github.io/assets/banner.png">
 	<!-- Schema.org for Google -->
 	<meta itemprop="name" content="Edazpotato!">
-	<meta itemprop="description" content="Edazpotato is a Web Developer and Robot Creator. Also some other things.">
+	<meta itemprop="description" content="Edazpotato is a Web Developer and Robot Creator. Here you can see all of the things I have made, and contact me.">
 	<meta itemprop="image" content="https://edazpotato.github.io/assets/banner.png">
 	<!-- Twitter -->
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:title" content="Edazpotato!">
-	<meta name="twitter:description" content="Edazpotato is a Web Developer and Robot Creator. Also some other things.">
+	<meta name="twitter:description" content="Edazpotato is a Web Developer and Robot Creator. Here you can see all of the things I have made, and contact me.">
 	<meta name="twitter:site" content="@edazpotato">
 	<meta name="twitter:creator" content="@edazpotato">
 	<meta name="twitter:image:src" content="https://edazpotato.github.io/assets/banner.png">
 	<!-- Open Graph general (Facebook, Pinterest & Google+) -->
 	<meta name="og:title" content="Edazpotato!">
-	<meta name="og:description" content="Edazpotato is a Web Developer and Robot Creator. Also some other things.">
+	<meta name="og:description" content="Edazpotato is a Web Developer and Robot Creator. Here you can see all of the things I have made, and contact me.">
 	<meta name="og:image" content="https://edazpotato.github.io/assets/banner.png">
 	<meta name="og:url" content="https://edazpotato.github.io">
 	<meta name="og:site_name" content="Edazpotato!">
