Add alllllll the keywords

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<!-- Search Engine -->
 	<meta name="description" content="Edazpotato is a Web Developer and Robot Creator. Here you can see all of the things I have made, and contact me.">
 	<meta name="image" content="https://edazpotato.github.io/assets/banner.png">
+	<meta name="keywords" content="edaz, potato, edazpotato, oficial, website, bot, robot, web, website, developer, dev, online, server, youtube, video, minecraft, mine, craft, datapack, data, pack">
 	<!-- Schema.org for Google -->
 	<meta itemprop="name" content="Edazpotato!">
 	<meta itemprop="description" content="Edazpotato is a Web Developer and Robot Creator. Here you can see all of the things I have made, and contact me.">
