Make title bigger to please bing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- unimportant meta tags -->
 	<!-- COMMON TAGS -->
-	<title>Edazpotato!</title>
+	<title>Edazpotato - Web developer and Robot creator</title>
 	<!-- Search Engine -->
 	<meta name="description" content="Edazpotato is a Web Developer and Robot Creator. Here you can see all of the things I have made, and contact me.">
 	<meta name="image" content="https://edazpotato.github.io/assets/banner.png">
