--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
 	<meta charset="utf-8">
 	<meta name="theme-color" content="#A31621">
+	<link rel="manifest" href="/manifest.webmanifest">
 
 	
 	<!-- >>css<< -->
