--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					</div>
 					<div class="bottom">
 						<div class="links">
-							<a class="button portfolio" href="portfolio/" target="_blank" rel="noreferrer">Portfolio</a>
+							<a class="button portfolio" href="portfolio/" rel="noreferrer">Portfolio</a>
 							<a class="button twitter" href="https://twitter.com/edazpotato" target="_blank" rel="noreferrer">Twitter</a>
 							<a class="button github" href="https://github.com/edazpotato" target="_blank" rel="noreferrer">Github</a>
 							<a class="button discord" href="https://discord.gg/mzR7eeZ" target="_blank" rel="noreferrer">Discord</a>
@@ -78,7 +78,7 @@
 					<a href="https://www.pexels.com/photo/blue-body-of-water-with-orange-thunder-1102915/" target="_blank" rel="noreferrer">Photo by Johannes Plenio from Pexels</a>
 				</div>
 				<div id="privacypolicy" class="white-link">
-					<a href="privacy/" target="_blank" rel="noreferrer">Privacy and data policy</a>
+					<a href="privacy/" rel="noreferrer">Privacy and data policy</a>
 				</div>
 			</header>
 			<main>
