Add apple touch icon

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 		<meta name="og:site_name" content="Edazpotato!">
 		<meta name="og:locale" content="en_NZ">
 		<meta name="og:type" content="website">
-
+		<!-- Apple -->
+		<meta name="apple-touch-icon" content="https://edazpotato.github.io/assets/icon-192.png">
 		<!-- important meta tags -->
 		<meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
 		<meta charset="utf-8">
