--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 	<head>
+		<!-- google anylitics -->
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-176402796-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-176402796-1');
+		</script>
+
 		<!-- unimportant meta tags -->
 		<!-- COMMON TAGS -->
 		<title>Edazpotato - Web developer and Robot creator</title>
