Re word some of the cookie policy, and add info on anylitics

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -7,23 +7,36 @@
     <main id="content">
       <section id="title">
         <h1>Privacy and data policy</h1>
-        <br/>
-        <h3>Including cookies and other similar technologies</h3>
-        <br/>
         <hr/>
+        <pre>
+          <code>
+            By using this website you cconsent to cookies and similar technologies being used and anonymous data being collected about you and your computer
+          </code>
+        </pre>
       </section>
       <section id="policy">
         <article id="cookies">
-          <h4>Cookies and similar technologys</h4>
-          <h6>Cookies</h6>
+          <h4>Cookies and similar technologies</h4>
+          <h5>Cookies</h6>
           <p>
-            By using this website, you agree to us storing cookies in your web browser. These are used for speed optimisation, sessions and anylitics.
+            By using this website, you agree to cookies being stored in your web browser. These are used for speed optimisation, sessions and anylitics.
             <br/>
             Some this party providers whose services we use (such as google or cloudflare) will also store cookies in your browser. By using this website you consent to those as well.
           </p>
-          <h6>Localstorage and other technologies</h6>
+          <h5>Localstorage and similar</h6>
           <p>
             We also use technologies other than cookies to store data in your browser. These are used mostly for providing and enhansed experience, such as having light or dark mode preferenes persist over multiple browsing sessions
+          </p>
+        </article>
+        <article id="anylitics">
+          <h4>Anylitics</h4>
+          <h5>Clouadflare Anylitics</h5>
+          <p>
+            Cloudflare (a company whose services we use) collects data based on your IP and browser when you make a request to this website in order to provide speed otimization and information on who uses this website.
+          </p>
+          <h5>Google Anylitics</h5>
+          <p>
+            Google Anylitics, which is active on select pages of this website collects anonomas data about Engament with the site, browsing time and other statistics. 
           </p>
         </article>
       </sectioN>
