Change some titles

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -16,14 +16,14 @@
       </section>
       <section id="policy">
         <article id="cookies">
-          <h4>Cookies and similar technologies</h4>
+          <h4>Cookies and other storage technologies</h4>
           <h5>Cookies</h6>
           <p>
             By using this website, you agree to cookies being stored in your web browser. These are used for speed optimisation, sessions and anylitics.
             <br/>
             Some this party providers whose services we use (such as google or cloudflare) will also store cookies in your browser. By using this website you consent to those as well.
           </p>
-          <h5>Localstorage and similar</h6>
+          <h5>Localstorage and similar systems</h6>
           <p>
             We also use technologies other than cookies to store data in your browser. These are used mostly for providing and enhansed experience, such as having light or dark mode preferenes persist over multiple browsing sessions
           </p>
