Fix some tabs a bit

--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -24,17 +24,15 @@
         <label class="pseudo button toggle" for="todo">Balloon</label>
       </section>
       <div class="row">
-        <div>
-          <img src="img/forest.jpg">
-        </div>
-
-        <div>
-          <img src="img/lake.jpg">
-        </div>
-
-        <div>
-          <img src="img/balloon.jpg">
-        </div>
+        <article>
+          Home
+        </article>
+        <article>
+          Notes
+        </article>
+        <article>
+          todos
+        </article>
       </div>
     </main>
     <footer>
