Fix button names

--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -19,9 +19,9 @@
       <input id='notes' type='radio' name='tabgroupB'>
       <input id='todos' type='radio' name='tabgroupB'>
       <section id="sidebar">
-        <label class="pseudo button stack toggle" for="home">Forest</label>
-        <label class="pseudo button stack toggle" for="notes">Lake</label>
-        <label class="pseudo button stack toggle" for="todo">Balloon</label>
+        <label class="pseudo button stack toggle" for="home">Home</label>
+        <label class="pseudo button stack toggle" for="notes">Notes</label>
+        <label class="pseudo button stack toggle" for="todo">Todos</label>
       </section>
       <div class="row">
         <article>
