--- a/outlinr/index.html
+++ b/outlinr/index.html
@@ -15,30 +15,30 @@
       <h1>Outlinr</h1>
     </header>
     <main class="tabs three">
-      <input id='home' type='radio' name='tabgroupB' checked />
       <input id='notes' type='radio' name='tabgroupB'>
       <input id='todos' type='radio' name='tabgroupB'>
       <section id="sidebar">
+        +<input id='home' type='radio' name='tabgroupB' checked />
         <label class="stack" for="home">
-          <input type="radio" name="stack">
+          <input name="stack" type="radio">
           <span class="button toggle">
-            Home
+            <span class="icon-picture"></span> Home
           </span>
         </label>
         <label class="stack" for="notes">
-          <input type="radio" name="stack">
+          <input name="stack" type="radio">
           <span class="button toggle">
-            Notes
+            <span class="icon-puzzle"></span> Notes
           </span>
         </label>
-        <label class="stack" for="todo">
-          <input type="radio" name="stack">
+        <label class="stack" for="todos">
+          <input name="stack" type="radio">
           <span class="button toggle">
-            Todos
+            <span class="icon-file-code"></span> Todos
           </span>
         </label>
       </section>
-      <div class="row">
+      <section>
         <article>
           Home
         </article>
@@ -48,7 +48,7 @@
         <article>
           todos
         </article>
-      </div>
+      </section>
     </main>
     <footer>
       
